# expense-manager

./: .env.example  .gitignore  LICENSE  README.md
backend/: .env.example  alembic.ini  mypy.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0b8de384c16c_create_documents_table.py  550015ebe63e_create_document_extractions_table.py  b007cf82ac99_align_expenses_schema_source_merchant_.py  d54903da836e_create_expenses_table.py  dc1447fdeef5_add_ocr_fields_to_documents.py  e944ce668afe_add_timestamp_defaults_to_documents.py
backend/app/: db.py  main.py  storage.py
backend/app/api/routes/: documents.py  expenses.py  health.py
backend/app/core/: config.py
backend/app/extraction/: rule_v0.py
backend/app/models/: __init__.py  base.py  document.py  document_extraction.py  espense.py  expense.py
backend/app/ocr/: pdf_render.py  preprocess.py  tesseract_engine.py
backend/app/schemas/: __init__.py  document.py  expense.py  extraction.py
backend/app/services/: __init__.py  documents.py  expenses.py  extraction.py
backend/scripts/: ocr_eval_smoke.py
backend/tests/: conftest.py  test_documents_ocr.py  test_expenses_crud.py  test_extraction_rule_v0.py  test_health.py
ops/: docker-compose.yml
ui_streamlit/: app.py
